# deathbygolfprompter

./: .gitignore  Cargo.toml  Dioxus.toml  index.html  pink_hammer_web_1.0.0_arm64.deb
docs/: index.html
docs/assets/dioxus/: Death By Golf.js  Death By Golf_bg.wasm
src/: death_by_golf.rs  main.rs
